Update course running iteration

--- a/app/views/history/course-not-running-oct-15/index.html
+++ b/app/views/history/course-not-running-oct-15/index.html
@@ -25,7 +25,7 @@
         </blockquote>
       </div>
 
-      <h2 class="heading-medium">A new publishing status</h2>
+      <h2 class="heading-large">A new publishing status</h2>
       <p>We need a new publishing status when a course is set to running but not yet been published on UCAS.</p>
 
       <p>Thus, courses can have 1 of 4 statuses:</p>
@@ -33,18 +33,65 @@
         <li>Running - the course is published and applicants can see it on search</li>
         <li>Not running – the course is not published, it can’t be found on search</li>
         <li>New - not yet running – the course is not published yet because it hasn’t been set to running on UCAS</li>
-        <li><strong class="bold-small">Running but incomplete – the course is not published yet because it hasn’t been set to publish on UCAS</strong></li>
+        <li><strong class="bold">Needs attention on UCAS – the course is not published yet because none of its training locations has been set to publish on UCAS</strong></li>
       </ul>
+
+      <p>On the organisation page any course with the status ‘Needs attention on UCAS’ should have that status displayed in red and bold to drawn attention to it. The status should link to the course page:</p>
+
+      <p>
+        <img src="/public/images/history/needs-attention-status.png" alt="Screenshot showing needs attention on UCAS status" style="width: 100%" />
+      </p>
 
       <p>Whether or not a course has been published on UCAS isn’t relevant for ’Running’, ’Not running’ and ’New - not yet running’ statuses.</p>
 
-      <h2 class="heading-medium">Courses that are running but incomplete</h2>
-      <p>Courses that are running but are incomplete can’t be edited. The fields and publish actions do not show. The publisher is prompted to publish the course on UCAS web-link.</p>
+      <h2 class="heading-large">Training location status</h2>
+      <p>When a training location is set to running but publish is set to ‘No’ it should have the following status:</p>
+
+      <div class="panel panel-wide-border">
+        <p>
+          Needs attention on UCAS: This location is set to ‘running’ but candidates can’t apply to it. To allow candidates to view and apply to this location, you must set its publish value to ‘Yes’ in UCAS web-link.
+        </p>
+      </div>
 
       <p>
         <a href="https://trello.com/c/sXUxUwyL/479-ucas-unpublished-courses-appearing-on-search-showing-incorrectly-on-publish">Trello ticket</a>
       </p>
     </div>
+  </div>
+
+  <h2 class="heading-large">If all training locations are wrong</h2>
+
+  <p>We need to show an error message at the top of the course page:</p>
+
+  <div class="error-summary" role="alert" aria-labelledby="error-summary-heading-example-1" tabindex="-1">
+    <h3 class="heading-medium error-summary-heading" id="error-summary-heading-example-1">
+      This course needs attention in UCAS
+    </h3>
+    <p>Candidates can’t apply to this course because no training location has a publish value set to ‘Yes’ in <a href="#">UCAS web-link</a>. This course will not appear in Find postgraduate teacher training.</p>
+
+    <p>
+      To allow candidates to find and apply to this course, you must set the publish value of all currently running training locations to ‘Yes’.
+    </p>
+  </div>
+
+  <h2 class="heading-large">If some training locations are wrong</h2>
+
+  <p>We need to show a different error message at the top of the course page:</p>
+
+  <div class="error-summary" role="alert" aria-labelledby="error-summary-heading-example-1" tabindex="-1">
+    <h3 class="heading-medium error-summary-heading" id="error-summary-heading-example-1">
+      Your training locations need attention in UCAS
+    </h3>
+    <p>
+      Training locations for this course are set to ‘Running’ in <a href="#">UCAS web-link</a>, but their publish value hasn’t been set to ‘Yes’.
+    </p>
+    <p>These training locations will not appear in Find postgraduate teacher training:</p>
+    <ul class="list list-bullet bold">
+      <li>Matravers School (Code: M)</li>
+    </ul>
+    <p>
+      To allow candidates to view and apply to a training location, you must set its publish value to ‘Yes’ in web-link.
+    </p>
   </div>
 </main>
 {% endblock %}
