--- a/app/views/course.html
+++ b/app/views/course.html
@@ -23,6 +23,33 @@
     {% endif %}
   </div>
 
+  <div class="error-summary" role="alert" aria-labelledby="error-summary-heading-example-1" tabindex="-1">
+    <h3 class="heading-medium error-summary-heading" id="error-summary-heading-example-1">
+      Your training locations need attention in UCAS
+    </h3>
+    <p>
+      Training locations for this course are set to ‘Running’ in <a href="#">UCAS web-link</a>, but their publish value hasn’t been set to ‘Yes’.
+    </p>
+    <p>These training locations will not appear in Find postgraduate teacher training:</p>
+    <ul class="list list-bullet bold">
+      <li>Matravers School (Code: M)</li>
+    </ul>
+    <p>
+      To allow candidates to view and apply to a training location, you must set its publish value to ‘Yes’ in web-link.
+    </p>
+  </div>
+
+  <div class="error-summary" role="alert" aria-labelledby="error-summary-heading-example-1" tabindex="-1">
+    <h3 class="heading-medium error-summary-heading" id="error-summary-heading-example-1">
+      This course needs attention in UCAS
+    </h3>
+    <p>Candidates can’t apply to this course because no training location has a publish value set to ‘Yes’ in <a href="#">UCAS web-link</a>. This course will not appear in Find postgraduate teacher training.</p>
+
+    <p>
+      To allow candidates to find and apply to this course, you must set the publish value of all currently running training locations to ‘Yes’.
+    </p>
+  </div>
+
   <h1 class="heading-xlarge">
     <span class="heading-secondary">{{ course.options }}</span>
     {{ title }}
