Update copy for discontinued training locations

--- a/app/views/course.html
+++ b/app/views/course.html
@@ -181,9 +181,9 @@
             {% endfor %}
 
             <details>
-              <summary><span class="summary">There are 4 suspended and discontinued training locations</span></summary>
+              <summary><span class="summary">There are 4 suspended or discontinued training locations for this course</span></summary>
               <div class="panel panel-border-narrow">
-                <p>These are old training locations which are no longer valid for this course.</p>
+                <p>These locations won’t appear on the page for this course and candidates won’t be able apply for them.</p>
 
                 {% for school in course.schools %}
                 <h4 class="heading-small add-top-margin">{{ school.name }} (Code: {{ school.code }})</h4>
@@ -192,10 +192,6 @@
                   <dd>{{ school.address }}</dd>
                   <dt>Status:</dt>
                   <dd>Suspended</dd>
-                  <dt>Vacancies:</dt>
-                  <dd>Full time vacancies</dd>
-                  <dt>Apply from:</dt>
-                  <dd>October 2018</dd>
                 </dl>
                 {% endfor %}
               </div>
