Document discontinued locations design

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -14,6 +14,15 @@
 
   <div class="grid-row">
     <div class="column-two-thirds">
+      <h2 class="heading-medium">November 2018</h2>
+
+      <h3 class="heading-small">
+        <a href="/history/hide-discontinued-locations">Hide discontinued training locations</a>
+      </h3>
+      <p>
+        Don’t show these locations to avoid confusion.
+      </p>
+
       <h2 class="heading-medium">October 2018</h2>
 
       <h3 class="heading-small">
