Revert "Hide needs attention designs"
This reverts commit b12d37dba40d1b855e1d26f99fc1b1df6c8b8fe8.

--- a/app/views/course.html
+++ b/app/views/course.html
@@ -23,7 +23,7 @@
     {% endif %}
   </div>
 
-  <!-- <div class="error-summary" role="alert" aria-labelledby="error-summary-heading-example-1" tabindex="-1">
+  <div class="error-summary" role="alert" aria-labelledby="error-summary-heading-example-1" tabindex="-1">
     <h3 class="heading-medium error-summary-heading" id="error-summary-heading-example-1">
       Your training locations need attention in UCAS
     </h3>
@@ -48,7 +48,7 @@
     <p>
       To allow candidates to find and apply to this course, you must set the publish value of all currently running training locations to ‘Yes’.
     </p>
-  </div> -->
+  </div>
 
   <h1 class="heading-xlarge">
     <span class="heading-secondary">{{ course.options }}</span>
