--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -17,6 +17,13 @@
       <h2 class="heading-medium">November 2018</h2>
 
       <h3 class="heading-small">
+        <a href="/history/the-location-problem">The location problem</a>
+      </h3>
+      <p>
+        Location is a complex issue, we begin to break it down.
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/hide-discontinued-locations">Hide discontinued training locations</a>
       </h3>
       <p>
