Link to the discussion guide

--- a/app/views/history/the-location-problem.html
+++ b/app/views/history/the-location-problem.html
@@ -68,6 +68,8 @@
 
       <p>We aimed to understand the meaning of ‘location’ from providers and their needs for inputting/managing/presenting location to users.</p>
 
+      <p><a href="https://docs.google.com/document/d/1RlNr28brdQAo2NWzAulSNtg_1NdEt7HFh033vi8prUM/edit">Research discussion guide</a></p>
+
       <p>We’ve spoken to 3 providers:</p>
 
       <ul class="list list-bullet">
