--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -47,7 +47,7 @@
       <h3 class="heading-medium">Preview and publish courses</h3>
       <p>Give more details about each of your courses - including their structure and content, information about fees and financial help, and the qualifications needed for them.</p>
 
-      <p>Make sure you preview each course before you publish it, to see how it will look online to applicants. Your courses won’t be seen by applicants until the search service, Find postgraduate teacher training, is launched in October.</p>
+      <p>Make sure you preview each course before you publish it, to see how it will look online to applicants.</p>
 
       <h3 class="heading-medium">Copying content between courses</h3>
       <p>After you’ve saved your first course, when you’re completing the next you can use the ‘copy from course’ feature to fill in fields. This can be found on the ‘About this course’, ‘Course length and fees’ and ‘Requirements and eligibility’ pages.</p>
