Fix location URL

--- a/app/views/locations.html
+++ b/app/views/locations.html
@@ -47,7 +47,7 @@
       <tr>
         <td><strong class="bold-medium">{{ school.code }}</strong></td>
         <td>
-          <a href="/school/{{ school.code }}" class="bold">{{ school.name }}</a><br />
+          <a href="/location/{{ school.code }}" class="bold">{{ school.name }}</a><br />
           {{ school.address }}
         </td>
         <td>5 courses</td>
