--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -40,8 +40,20 @@
 
   <div class="grid-row">
     <div class="column-two-thirds">
+      <h2 class="heading-large remove-top-margin">Step 2. Locations</h2>
+      <p>Give the address, type of location and name of each place applicants can apply to.</p>
+      <p>When an applicant searches by location we use the address of each training location to calculate the distance to them.</p>
+      <p>
+        <a href="/locations">Fill-in details about your training locations</a>
+      </p>
+    </div>
+  </div>
+  <hr />
+
+  <div class="grid-row">
+    <div class="column-two-thirds">
       <h2 class="heading-large">
-        Step 2. Course details
+        Step 3. Course details
       </h2>
 
       <h3 class="heading-medium">Preview and publish courses</h3>
@@ -77,9 +89,7 @@
             {% if course.accrediting == accrediting.name %}
               <tr>
                 <td>
-                  {% if (loop.index == 5) %}
-                    <a href="/course/{{ accrediting.slug }}/{{ course.programmeCode }}?attention=yes">{{ course.name }} ({{ course.programmeCode }})</a>
-                  {% elseif (loop.index != 4 and loop.index != 7) %}
+                  {% if (loop.index != 4 and loop.index != 7) %}
                     <a href="/course/{{ accrediting.slug }}/{{ course.programmeCode }}">{{ course.name }} ({{ course.programmeCode }})</a>
                   {% else %}
                     <a href="/course-not-running/{{ accrediting.slug }}/{{ course.programmeCode }}">{{ course.name }} ({{ course.programmeCode }})</a>
@@ -88,9 +98,7 @@
                 </td>
                 <td>{{ course.options }}</td>
                 <td>
-                  {% if (loop.index == 5) %}
-                    <a href="/course/{{ accrediting.slug }}/{{ course.programmeCode }}?attention=yes" style="font-weight: bold; color: #b10e1e;">Needs&nbsp;attention<br />in UCAS</a>
-                  {% elseif (loop.index != 4 and loop.index != 7) %}
+                  {% if (loop.index != 4 and loop.index != 7) %}
                     Running
                   {% else %}
                     Not running
