--- a/app/views/location.html
+++ b/app/views/location.html
@@ -1,36 +1,129 @@
 {% extends "layout.html" %}
-{% block page_title %}Schools{% endblock %}
+{% block page_title %}Location{% endblock %}
 
 {% block content %}
 <main id="content" role="main">
   {% include "includes/phase_banner_beta.html" %}
   <div class="breadcrumbs">
     <ol>
-      <li><a href="/schools">Schools</a></li>
+      <li><a href="/">{{ data['training-provider-name']}}</a></li>
+      <li><a href="/locations">Locations</a></li>
     </ol>
   </div>
 
   <h1 class="heading-xlarge">
-    <span class="heading-secondary">{{ data['training-provider-name'] }}</span>
     {{ school.name }}
   </h1>
 
-  <p class="lede">{{ school.description }}</p>
+  <form action="/locations" class="grid-row">
+    <div class="column-two-thirds">
+      <!-- <h2 class="heading-medium">Information from UCAS</h2>
+      <p>You can only change this information using <a href="https://update.ucas.co.uk/netupdate2/Welcome.htm">UCAS web-link</a>. Changes will usually appear here within one working day.</p>
+      <dl class="course-part-tasks aligned add-top-margin add-bottom-margin">
+        <dt>Name:</dt>
+        <dd>{{ school.name }}</dd>
+        <dt>Training location code:</dt>
+        <dd>{{ school.code }}</dd>
+      </dl>
+      <hr /> -->
 
-  <p>
-    <b>{{ school.name }}</b><br />
-    {{ school['address-line-1'] }}<br />
-    {{ school['town'] }}<br />
-    {{ school['postcode'] }}
-  </p>
+      {{ macros.textbox(school.code + '-location-website', 'Website (optional)', 'For example, a school website', 'form-control-full', null, errors) }}
 
-  <p>
-    <a href="#">{{ school['website'] }}</a>
-  </p>
+      <hr />
 
-  <p>
-    <a href="/school/{{ school.id }}/edit">Edit school</a>
-  </p>
+      <h2 class="heading-large add-double-bottom-margin" id="tell-us">Tell us about this location</h2>
+
+      <p>Pick one or more statements that describe this location.</p>
+
+      {% set fields = [
+          {
+            name: 'Applicants will spend time training here'
+          },
+          {
+            name: 'No training happens here'
+          },
+          {
+            name: 'This location is for academic training'
+          },
+          {
+            name: 'This location is for professional training'
+          },
+          {
+            name: 'Applicants need to travel to this address'
+          },
+          {
+            name: 'This is where applicants will go to most'
+          },
+          {
+            name: 'Applicants will spend some time here but will mostly be at another location'
+          },
+          {
+            name: 'This location represents an area rather than a place'
+          },
+          {
+            name: 'This location represents itself and other nearby locations'
+          },
+          {
+            name: 'This location represents many places because of the limit of 36 training locations in UCAS'
+          }
+        ]
+      %}
+
+      {{ macros.checkboxGroup(school.code + '-tell-us', fields, errors) }}
+
+      <hr />
+
+      <h2 class="heading-large add-double-bottom-margin" id="type">Label this location</h2>
+
+      <p>Pick one or more label that best describes this location.</p>
+
+      {% set fields = [
+          {
+            name: 'Host school',
+            text: 'A school where a student is based for most of their time. Also known as a parent school or home school.'
+          },
+          {
+            name: 'University campus',
+            text: 'A university campus where a student will be based for a large part of their training, when not on school placements.'
+          },
+          {
+            name: 'Training site',
+            text: 'Students will spend some time training here, but it is not their main location. There can be multiple training centres throughout the training time.'
+          },
+          {
+            name: 'Regional hub',
+            text: 'This represents a number of training locations in an area - students apply to that area. It isn’t a specific address that students visit.'
+          },
+          {
+            name: 'Administrative address',
+            text: '<p>No training takes place here. Students do not need to go to this location. This might be the headquarters or registered address of your organisation.
+</p><p>If students do go to this location, it is not purely administrative - please choose another option.</p>'
+          }
+        ]
+      %}
+
+      {{ macros.checkboxGroup(school.code + '-type', fields, errors, 10) }}
+
+      <hr />
+
+      <h2 class="heading-large" id="address">Address</h2>
+      <p>Not available in this prototype.</p>
+
+
+      <!--
+      {{ macros.textbox(school.code + '-building-and-street', 'Building and street', null, 'form-control-full', null, errors) }}
+      {{ macros.textbox(school.code + '-building-and-street-2', null, null, 'form-control-full', null, errors) }}
+
+      {{ macros.textbox(school.code + '-organisation-town-or-city', 'Town or city', null, 'form-control', null, errors) }}
+      {{ macros.textbox(school.code + '-county', 'County', null, 'form-control', null, errors) }}
+      {{ macros.textbox(school.code + '-postcode', 'Postcode', null, 'form-control-small', null, errors) }}
+      -->
+      <hr />
+
+
+      <input type="submit" class="button" value="Save" />
+    </div>
+  </form>
 </main>
 
 {% endblock %}
