--- a/app/views/locations.html
+++ b/app/views/locations.html
@@ -23,7 +23,7 @@
 
   <div class="grid-row">
     <div class="column-two-thirds">
-      <h2 class="heading-large">Locations that can be applied to</h2>
+      <h2 class="heading-large">Locations applicants can apply to</h2>
       <p>Each location has a name, address and a code. The code is used by applicants to choose a training location on the UCAS application form.</p>
 
       <p>When an applicant searches by location we use the address of each location to determine how far away each course is from them.</p>
@@ -36,10 +36,11 @@
   <table class="table">
     <thead>
       <tr>
-        <th>Code</th>
-        <th style="width: 60%">Name</th>
-        <th style="width: 20%">Courses</th>
-        <th style="width: 20%">Content</th>
+        <th style="width: 40px">Code</th>
+        <th>Name</th>
+        <th>Label</th>
+        <!-- <th style="width: 20%">Courses</th>
+        <th style="width: 20%">Content</th> -->
       </tr>
     </thead>
     <tbody>
@@ -50,8 +51,16 @@
           <a href="/location/{{ school.code }}" class="bold">{{ school.name }}</a><br />
           {{ school.address }}
         </td>
-        <td>5 courses</td>
-        <td><span class="phase-tag phase-tag-small phase-tag-no-content">Empty</span></td>
+        <td>
+          {% for type in data[school.code + '-type'] %}
+            <span class="phase-tag phase-tag-small">{{ type }}</span><br />
+          {% endfor %}
+          {% if not data[school.code + '-type'] %}
+            <span class="phase-tag phase-tag-small phase-tag-no-content">None</span>
+          {% endif %}
+        </td>
+        <!-- <td>5 courses</td>
+        <td><span class="phase-tag phase-tag-small phase-tag-no-content">Empty</span></td> -->
       </tr>
       {% endfor %}
     </tbody>
