--- a/app/views/location.html
+++ b/app/views/location.html
@@ -28,6 +28,7 @@
       <hr /> -->
 
       {{ macros.textbox(school.code + '-location-website', 'Website (optional)', 'For example, a school website', 'form-control-full', null, errors) }}
+      {{ macros.textbox(school.code + '-urn', 'School Unique Reference Number (URN) (optional)', 'This is the unique reference number allocated to all schools by Edubase.', 'form-control-small', null, errors) }}
 
       <hr />
 
