Tweak language around application locations

--- a/app/views/locations.html
+++ b/app/views/locations.html
@@ -23,8 +23,8 @@
 
   <div class="grid-row">
     <div class="column-two-thirds">
-      <h2 class="heading-large">Locations applicants can apply to</h2>
-      <p>Each location has a name, address and a code. The code is used by applicants to choose a training location on the UCAS application form.</p>
+      <h2 class="heading-large">Locations applicants can choose</h2>
+      <p>Each location has a name, address and a code. Applicants use the name to choose a training location on their UCAS application form.</p>
 
       <p>When an applicant searches by location we use the address of each location to determine how far away each course is from them.</p>
 
