Another copy tweak

--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -41,7 +41,7 @@
   <div class="grid-row">
     <div class="column-two-thirds">
       <h2 class="heading-large remove-top-margin">Step 2. Locations</h2>
-      <p>Give the address, type of location and name of each place applicants can apply to.</p>
+      <p>Give the address, type of location and name of each place applicants can choose when they apply.</p>
       <p>When an applicant searches by location we use the address of each training location to calculate the distance to them.</p>
       <p>
         <a href="/locations">Fill-in details about your training locations</a>
