Add details about location design and research

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -17,6 +17,13 @@
       <h2 class="heading-medium">November 2018</h2>
 
       <h3 class="heading-small">
+        <a href="/history/location-research">Location labels and survey research</a>
+      </h3>
+      <p>
+        First attempts to understand location with a classification exercise.
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/the-location-problem">The location problem</a>
       </h3>
       <p>
