Fix lookback links

--- a/app/views/history/qa-draft/index.html
+++ b/app/views/history/qa-draft/index.html
@@ -14,7 +14,7 @@
   <div class="grid-row">
     <div class="column-two-thirds">
       <p>An initial look at the process of sending a course to DfE for review, and examples of the responses providers might receive back.</p>
-      <p>We tested this in our first round of research with providers, towards the end of each session. <a href="https://lookback.io/upkurve/providers">Research sessions are on Lookback</a>.</p>
+      <p>We tested this in our first round of research with providers, towards the end of each session. <a href="https://lookback.io/dfe-digital/providers">Research sessions are on Lookback</a>.</p>
     </div>
   </div>
 
