--- a/app/views/includes/scripts.html
+++ b/app/views/includes/scripts.html
@@ -1,7 +1,7 @@
 <!-- Javascript -->
 <!--[if lte IE 8]><script src="/public/javascripts/bind.js"></script><![endif]-->
-<script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
-
+<!-- <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script> -->
+<script src="https://unpkg.com/accessible-autocomplete@1.6.1/dist/accessible-autocomplete.min.js"></script>
 <script src="/public/javascripts/details.polyfill.js"></script>
 <script src="/public/javascripts/jquery-1.11.3.js"></script>
 <script src="/public/javascripts/govuk/shim-links-with-button-role.js"></script>
