--- a/app/views/school-autocomplete.html
+++ b/app/views/school-autocomplete.html
@@ -3,6 +3,13 @@
 {% block page_title %}{{ title }}{% endblock %}
 
 {% block content %}
+
+<style>
+  #selected-schools-list li {
+    border-bottom: 1px solid #ccc;
+  }
+</style>
+
 <main id="content" role="main">
   {% include "includes/phase_banner_beta.html" %}
   <div class="breadcrumbs">
@@ -19,15 +26,25 @@
   <div class="grid-row">
     <div class="column-two-thirds">
       <form action="/locations">
-        <ul class="list" id="selected-schools-list"></ul>
-        <hr />
-
+        <ul class="list" id="selected-schools-list">
+          {% for s in data['partner-school'] %}
+            <li>
+              <h3 class="heading-small remove-bottom-margin">
+                {{ s }}
+              </h3>
+              <input type="hidden" name="partner-school" value="{{ s }}">
+              <p>
+                <a href="https://www.get-information-schools.service.gov.uk/Establishments/Establishment/Details/" target="_blank">School details</a> – <a href="#">Remove</a>
+              </p>
+            </li>
+          {% endfor %}
+        </ul>
         <div class="form-group">
-          <label for="my-autocomplete">Choose a school by name or URN number</label>
+          <label for="my-autocomplete">Choose a school by name, postcode or URN number</label>
           <div id="my-autocomplete-container"></div>
         </div>
 
-        <input type="submit" class="button" value="Add" />
+        <input type="submit" class="button" value="Save" />
       </form>
     </div>
   </div>
@@ -55,10 +72,17 @@
     minLength: 2,
     onConfirm: function(school) {
       if (school) {
+        var urn = school.match(/\d{6}/)[0];
+
         $('#selected-schools-list').append(`
           <li>
-            <h3 class="heading-small remove-bottom-margin">${school}</h3>
-            <p><a href="#">Remove school</a> – <a href="https://www.get-information-schools.service.gov.uk/Establishments/Establishment/Details/102344">Details</a> – Bristol</p>
+            <h3 class="heading-small remove-bottom-margin">
+              ${school}
+            </h3>
+            <input type="hidden" name="partner-school" value="${school}">
+            <p>
+              <a href="https://www.get-information-schools.service.gov.uk/Establishments/Establishment/Details/${urn}" target="_blank">School details</a> – <a href="#">Remove</a>
+            </p>
           </li>
         `);
         setTimeout(function() {
