--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -17,6 +17,13 @@
       <h2 class="heading-medium">November 2018</h2>
 
       <h3 class="heading-small">
+        <a href="/history/schools-autocomplete">Schools autocomplete</a>
+      </h3>
+      <p>
+        An autocomplete for selecting partner schools quickly.
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/location-research">Location labels and survey research</a>
       </h3>
       <p>
