--- a/app/views/history/schools-autocomplete/index.html
+++ b/app/views/history/schools-autocomplete/index.html
@@ -15,6 +15,10 @@
     <div class="column-two-thirds">
       <p>We need to test this with providers.</p>
 
+      <p>
+        <a href="https://manage-courses-prototype.herokuapp.com/school-autocomplete">Live demo</a>
+      </p>
+
       <p>If we begin asking providers for their <a href="https://search-and-compare-prototype.herokuapp.com/history/maps-for-providers-with-many-partners">list of partner schools</a> we’ll need a fast and easy way to create and manage that list. Partner schools can be more than 1,000.</p>
 
       <p>Use the accessible autocomplete with the <a href="https://get-information-schools.service.gov.uk/Downloads">Edubase schools data</a>, there’s about 26,000 schools.</p>
