Also link to PR

--- a/app/views/history/schools-autocomplete/index.html
+++ b/app/views/history/schools-autocomplete/index.html
@@ -16,7 +16,7 @@
       <p>We need to test this with providers.</p>
 
       <p>
-        <a href="https://manage-courses-prototype.herokuapp.com/school-autocomplete">Live demo</a>
+        <a href="https://manage-courses-prototype.herokuapp.com/school-autocomplete">Live demo</a> and <a href="https://github.com/DFE-Digital/manage-courses-prototype/pull/18">pull request</a>.
       </p>
 
       <p>If we begin asking providers for their <a href="https://search-and-compare-prototype.herokuapp.com/history/maps-for-providers-with-many-partners">list of partner schools</a> we’ll need a fast and easy way to create and manage that list. Partner schools can be more than 1,000.</p>
