--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -17,6 +17,13 @@
       <h2 class="heading-medium">November 2018</h2>
 
       <h3 class="heading-small">
+        <a href="/history/ucas-onboarding-form">UCAS training provider onboarding form</a>
+      </h3>
+      <p>
+        Reference: The form completed by new training providers when they begin offering initial teacher training courses.
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/schools-autocomplete">Schools autocomplete</a>
       </h3>
       <p>
