--- a/app/views/new/duration.html
+++ b/app/views/new/duration.html
@@ -1,4 +1,4 @@
-{% set title = 'How long does the course run for?' %}
+{% set title = 'Which phase is this course for?' %}
 {% extends "layout.html" %}
 {% block page_title %}{{ title }}{% endblock %}
 
@@ -6,23 +6,13 @@
 
 <main id="content" role="main">
   {% include "includes/phase_banner_beta.html" %}
-  <a href="/new/start-date" class="link-back">Back</a>
+  <a href="/new/qualifications" class="link-back">Back</a>
 
   <h1 class="heading-xlarge">
     {{ title }}
   </h1>
-  <form action="/new/applications-open" method="post">
-    {% set fields = [
-        {
-          name: '1 year'
-        },
-        {
-          name: '2 years'
-        }
-      ]
-    %}
-
-    {{ macros.radioGroup('duration', fields) }}
+  <form action="/new/duration" method="post">
+    {{ macros.datefields('start-date', 'Course start date') }}
 
     <div class="form-group">
       <input type="submit" class="button" value="Continue" />
