--- a/app/views/new/outcome.html
+++ b/app/views/new/outcome.html
@@ -13,7 +13,7 @@
   </h1>
   <div class="grid-row">
     <div class="column-two-thirds">
-      <p>Pick the outcome which describes what a trainee will get when they complete this course.</p>
+      <p>What will a trainee get when they complete this course?</p>
       <form action="/new/full-time-part-time" method="post">
 
         {% set fields = [
