--- a/app/views/new/phase.html
+++ b/app/views/new/phase.html
@@ -15,7 +15,7 @@
     <div class="column-two-thirds">
       <form action="/new/subject" method="post">
 
-        <h2 class="heading-medium remove-top-margin">Phase</h2>
+        <h2 class="heading-medium remove-top-margin">Level</h2>
         {% set fields = [
             {
               name: 'Primary'
